# RPG-Compendium

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  web-app.code-workspace
.github/workflows/: Build with trunk  StaticDeploy.yml  manual.yml  pages.yml  rust.yml
assets/: manifest.json  sw.js
site/: index.html  manifest.json  web-app.js
site/.stage/: manifest.json  web-app.js
src/: app.rs  main.rs  shortcuts.rs  user.rs
src/app/: images.rs  loader.rs  menubar.rs  mod.rs  pages.rs  popups.rs  shortcuts.rs  spells.rs  user.rs
src/app/pages/: compendium.rs  mod.rs  show_characters.rs
src/app/spells/: arcane.rs  fae.rs
src/mystward/: character.rs  mod.rs
src/mystward/character/: advances.rs  attributes.rs  items.rs  mod.rs  racial_archetypes.rs  traits.json  traits.rs
src/mystward/spells/: arcane.rs  fae.rs  mod.rs
src/resources/: defines.rs  icon.rs  image.rs  images.rs  loader.rs  mod.rs
src/user/: mod.rs
www/: index.html  manifest.json  web-app-125ae8eb0f169d1d.js  web-app-e15d0561da634c4f.js
