[package]
name = "web-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'
strip = true

[dependencies]
eframe = { version = "0.21.2", features = ["persistence"] }
egui = "0.21.0"
egui_extras = {version = "0.21.0", features = ["svg"]}
image = "0.24.5"
rfd = "0.11.1"
serde = { version = "1.0.152", features = ["derive"] }
async-std = "1.12.0"

# Native build
# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]

# Web build
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4"
tracing-wasm = "0.2.1"
console_error_panic_hook = "0.1.7"